@startuml

title __BACKEND's Class Diagram__\n

  package  {
    package backend.demo {
      package backend.demo.controller.api {
        interface AnalysisController {
        }
      }
    }
  }
  

  package  {
    package backend.demo {
      package backend.demo.controller.impl {
        class AnalysisControllerImpl {
        }
      }
    }
  }
  

  package  {
    package backend.demo {
      package backend.demo.model {
        class AnalysisData {
        }
      }
    }
  }
  

  package  {
    package backend.demo {
      package backend.demo.service.api {
        interface AnalysisServiceApi {
        }
      }
    }
  }
  

  package  {
    package backend.demo {
      class DemoApplication {
      }
    }
  }
  

  package  {
    package backend.demo {
      package backend.demo.analysisFunctions.model {
        package backend.demo.analysisFunctions.model.impl {
          class FFSModel {
          }
        }
      }
    }
  }
  

  package  {
    package backend.demo {
      package backend.demo.analysisFunctions.qualityAnalysisUtil {
        class Hi2 {
        }
      }
    }
  }
  

  package  {
    package backend.demo {
      package backend.demo.model {
        class InputFileData {
        }
      }
    }
  }
  

  package  {
    package backend.demo {
      package backend.demo.service.impl {
        class MarquardtAnalysisServiceImpl {
        }
      }
    }
  }
  

  package  {
    class MavenWrapperDownloader {
    }
  }
  

  package  {
    package backend.demo {
      package backend.demo.analysisFunctions.model {
        interface Model {
        }
      }
    }
  }
  

  package  {
    package backend.demo {
      package backend.demo.model {
        class Parameter {
        }
      }
    }
  }
  

  package  {
    package backend.demo {
      package backend.demo.service.api {
        interface ParseInputFileServiceApi {
        }
      }
    }
  }
  

  package  {
    package backend.demo {
      package backend.demo.service.impl {
        class ParseInputFileServiceImpl {
        }
      }
    }
  }
  

  package  {
    package backend.demo {
      package backend.demo.analysisFunctions.model {
        package backend.demo.analysisFunctions.model.impl {
          class PhaseFrequencyModel {
          }
        }
      }
    }
  }
  

  package  {
    package backend.demo {
      package backend.demo.config {
        class SecurityConfiguration {
        }
      }
    }
  }
  

  AnalysisControllerImpl -up-|> AnalysisController
  AnalysisControllerImpl o-- AnalysisServiceApi : analysisService
  AnalysisControllerImpl o-- ParseInputFileServiceApi : parseInputFileService
  AnalysisControllerImpl o-- Model : model
  FFSModel -up-|> Model
  MarquardtAnalysisServiceImpl -up-|> AnalysisServiceApi
  MarquardtAnalysisServiceImpl o-- Model : model
  ParseInputFileServiceImpl -up-|> ParseInputFileServiceApi
  PhaseFrequencyModel -up-|> Model


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
